# QuantLib-comparison

./: .gitignore  draft_academic_presentation.md  draft_v123_vs_v141_comparison.md  plan.md
.humanize/skill/2026-03-20_12-59-07-770929-324b29f1/: input.md  metadata.md
comparison_tests/: CMakeLists.txt  v123_vtable_anchors.cpp
comparison_tests/cmake/: try_build_v123_lib.cmake  try_compile_fail.cmake  v123_minimal_sources.cmake
comparison_tests/common/: fdm_test_helpers.hpp
comparison_tests/phase1_compile_tests/: test_discrete_barrier_construct.cpp  test_discrete_barrier_missing.cpp  test_disposable_signature.cpp  test_mesher_multipoint.cpp  test_mmatrix_diagnostic_missing.cpp  test_spatial_desc_missing.cpp
comparison_tests/phase2_runtime_tests/: test_cn_oscillation.cpp  test_discrete_barrier_huatai.cpp  test_positivity_huatai.cpp
comparison_tests/phase3_infrastructure/: test_mmatrix_diagnostic.cpp
comparison_tests/phase4_analysis/: backport_analysis.md  disposable_api_analysis.md  feature_matrix.md
comparison_tests/phase5_endtoend/: reproduce_paper_results.cpp
comparison_tests/results/: comparison_report.md
presentation/: .gitignore  build_all.sh  main.tex  plan.md  references.bib
presentation/data/: dependency_graph.json  feature_matrix.json  provenance.json
presentation/scripts/: common.py  plot_all.py  plot_dependency_graph.py  plot_feature_matrix.py
